2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c:
	Add println, str, hex actions, and expand print (thanks David
	Decotigny).

2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/matchers.[ch]:
	* src/parser.c:
	Add func_window_xid (thanks David Decotigny)

2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/matchers.h:
	Add missing func_window_workspace.

2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/e-sexp.c:
	Use gi18n.h (thanks David Decotigny)

2006-12-01  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.19.

2006-12-01  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Don't use wnck_window_set_geometry, that doesn't exist in GNOME
	2.14 (#381233)

2006-11-20  Ross Burton  <ross@burtonini.com>

	* src/xutils.[ch]:
	Add my_wnck_get_cardinal().

	* src/matchers.[ch]:
	* src/parser.c:
	Add window_workspace matcher, which returns the workspace number
	for the current window.

	Thanks to Andrew Yates.

2006-10-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.18.

2006-10-20  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c:
	Add set viewport action (thanks James Willcox).  Also remove the
	my_wnck functions.

	* src/xutils.[ch]:
	Add my_wnck_get_cardinal_list() and my_wnck_get_viewport_start()
	(thanks James).  Also add the my_wnck functions moved from
	actions.c.

2006-09-11  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c:
	Add unmaximise action (thanks Alex Menk).

2006-08-06  Ross Burton  <ross@burtonini.com>

	* src/xutils.c:
	Generalise my_wnck_get_string_property_latin1() to handle atoms,
	and coerce them to strings as required.

	* src/matchers.[ch]:
	* src/parser.c:
	Add window_property action to return the value of an arbitrary
	property on the window.

	Patch from Nigel Tao (#348378).

2006-07-04  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c: