@@ -60,4 +60,7 @@ ESExpResult *func_wintype(ESExp *f, int argc, ESExpResult **argv, Context *c);
 
 ESExpResult *func_opacity(ESExp *f, int argc, ESExpResult **argv, Context *c);
 
+ESExpResult *func_spawn_sync(ESExp *f, int argc, ESExpResult **argv, Context *c);
+ESExpResult *func_spawn_async(ESExp *f, int argc, ESExpResult **argv, Context *c);
+
 #endif /* _ACTIONS_H */
